--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,3 +1,7 @@
-<router-outlet></router-outlet>
+
 <app-sidebar></app-sidebar>
 <app-navbar></app-navbar>
+<div class="contenu">
+    
+    <router-outlet></router-outlet>
+</div>
