--- a/angular/src/app/components/dashboard/dashboard.component.html
+++ b/angular/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,14 @@
-<p>dashboard works!</p>
+<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+    @for(card of cards;track $index){
+    <div class="bg-white rounded-lg shadow-lg p-8">
+        <h3 class="text-xl font-bold text-gray-800 mb-1">{{card.title}}</h3>
+        <div class="spacer flex justify-between">
+            <h2 class="text-xl font-bold text-gray-800 mb-1 ">
+                {{card.amount}}
+            </h2>
+            <button><mat-icon>add_circle</mat-icon></button>
+            
+        </div>
+    </div>}
+   
+</div>
