--- a/angular/src/app/components/navbar/navbar.component.html
+++ b/angular/src/app/components/navbar/navbar.component.html
@@ -2,14 +2,76 @@
 
 <mat-toolbar class="mainheader">
     <mat-toolbar-row>
-      <img src="assets/foodlogo.png" alt="My App Logo" style="width: 40px; height: 40px;" />
+        <p class="date">{{ myDate }}</p>
+        <!-- <p class="time">{{currentTime}}</p> -->
+        <div class="spacer">
+        </div>
+       
+            <ul class="d-flex align-items-center">
+        
+                <li class="nav-item dropdown">
+                <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
+            <mat-icon class="icon">notifications_active</mat-icon>
+            <span class="badge  badge-number">{{notifications.length}}</span>
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
+            <li class="dropdown-header">
+              You have <span>{{notifications.length}}</span> new notifications
+              <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
+            </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            @for(notification of notifications;track $index){
+            <li class="notification-item">
+              <div>
+                <h4>{{notification.title}}</h4>
+                <p>{{notification.message}}</p>
+                <p>{{notification.time}}</p>
+              </div>
+            </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+          }
+            <li class="dropdown-footer">
+              <a href="#">Show all notifications</a>
+            </li>
+          </ul>
+
+        </li>
+        <li class="nav-item dropdown pe-3">
+
+          <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
+            <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
+            <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+          </a><!-- End Profile Iamge Icon -->
+
+          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
+            <li>
+              <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+                <i class="bi bi-person"></i>
+                <span>My Profile</span>
+              </a>
+            </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+
+            <li>
+              <a class="dropdown-item d-flex align-items-center" href="#">
+                <i class="bi bi-box-arrow-right"></i>
+                <span>Sign Out</span>
+              </a>
+            </li>
+
+          </ul>
+        </li>
+
+      </ul>
    
-   <div class="spacer">
-  
-    </div>
+</mat-toolbar-row>
+</mat-toolbar>
     
-    <p class="date">{{ myDate }}</p>
-    <!-- <p class="time">{{currentTime}}</p> -->
-    </mat-toolbar-row>
-    </mat-toolbar>
+    
   
