--- a/angular/src/app/components/sidebar/sidebar.component.html
+++ b/angular/src/app/components/sidebar/sidebar.component.html
@@ -6,13 +6,14 @@
         <div class="logo-text" *ngIf="collapsed">Money tracker</div>
     </div>
     <ul class="sidenav-nav">
-        <li class="sidenav-nav-item" *ngFor="let data of navData; let i = index">
+        @for(data of navData; track $index){
+        <li class="sidenav-nav-item">
             <a class="sidenav-nav-link" [routerLink]="[data.routeLink]">
                 <mat-icon class="sidenav-link-icon">{{data.icon}}</mat-icon>
                 <span class="sidenav-link-text" *ngIf="collapsed">
                     {{data.text}}
                 </span>
             </a>
-        </li>
+        </li>}
     </ul>
 </div>
