signin +sign up

--- a/angular/src/app/components/categories/categories.component.html
+++ b/angular/src/app/components/categories/categories.component.html
@@ -18,12 +18,12 @@
         </div>
         
         <div class="col-7">
-            @if (selectedCategory) {
+            <!-- @if (selectedCategory) { -->
                 <!-- <app-mange-cat [selectedCat]="selectedCategory"></app-mange-cat> -->
-            
+<!--             
                 } @else {
                 <h3>Choose category to update it ...</h3>
-                }
+                } -->
         </div> 
     </mat-tab>
     <mat-tab label="Income"> Content 2 </mat-tab>
