--- a/angular/src/app/components/mange-cat/mange-cat.component.html
+++ b/angular/src/app/components/mange-cat/mange-cat.component.html
@@ -1,4 +1,4 @@
-<div class="card-container">
+<!-- <div class="card-container">
   <div class="card">
     <div class="d-flex justify-content-center">
       <div class="col-lg-8 push-lg-4">
@@ -49,7 +49,7 @@
                 </form>
 
                 <div class="d-flex justify-content-center">
-                  <button (click)="Delete()" class="btn btn-danger">
+                  <button  class="btn btn-danger">
                     Delete
                   </button>
                 </div>
@@ -60,4 +60,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
