--- a/angular/src/app/components/signin/signin.component.html
+++ b/angular/src/app/components/signin/signin.component.html
@@ -9,11 +9,11 @@
 		</div>
 	</div>
 	<div class="flex justify-center self-center z-10">
-		<form #f="ngForm">
+		<form #f="ngForm" (ngSubmit)="submitHandler(f)">
 		<div class="p-12 bg-white mx-auto rounded-3xl w-90 ">
 			<div class="mb-7">
 				<h3 class="font-semibold text-2xl text-gray-800">Sign In </h3>
-				<p class="text-gray-400">Don't have an account? <a routerLink="/register"
+				<p class="text-gray-400">Don't have an account? <a routerLink="/signup"
 						class="text-sm text-green-700 hover:text-green-700">Sign Up</a></p>
 			</div>
 			<div class="space-y-6">
@@ -24,7 +24,7 @@
 					ngModel
 				    type="text"
 					name="mail"
-					[(ngModel)]="signin.Email"
+					ngModel
 					 placeholder="Email"/>
 					 @if (inpLogin.invalid && inpLogin.touched) {
 						<div class="alert alert-danger">Veuillez saisir une adresse mail...</div>
@@ -34,7 +34,7 @@
 					<div class="relative" x-data="{ show: true }">
 						<input placeholder="Password" :type="Password" class="w-full text-sm  px-4 py-3 bg-gray-200 focus:bg-gray-200 border  border-green-200 rounded-lg focus:outline-none focus:border-green-400"  minlength="5"
 						ngModel
-						name="password" [(ngModel)]="signin.pass"/>
+						name="password" ngModel/>
 						
 					</div>
 
@@ -48,7 +48,7 @@
 						</div>
 					</div>
 					<div>
-					<button type="submit" (click)="onLogin()" class="w-full flex justify-center bg-green-400 active:bg-green-900 text-white p-3  rounded-lg tracking-wide font-semibold  cursor-pointer transition ease-in duration-500" [disabled]="f.invalid">
+					<button type="submit" (click)="toggleIsRegister()" class="w-full flex justify-center bg-green-400 active:bg-green-900 text-white p-3  rounded-lg tracking-wide font-semibold  cursor-pointer transition ease-in duration-500" [disabled]="f.invalid">
 						Sign in
 					</button>
 					</div>
